# ai-portfolio-framework

./: .gitignore  README.md  pyproject.toml
.github/workflows/: daily-pages.yml
config/: alert_rules.yml  bear_cases.yml  falsifier_thresholds.yml  holdings.yml  metrics_catalog.yml  risk_factors.yml  sec_companies.yml  source_rules.yml  sources.yml  valuation_bands.yml  watchlist_rules.yml
data/: decision_log.yml  evidence_log.yml  filing_review_log.yml  link_health_history.jsonl  thesis_changelog.yml
data/manual/: ai_control_right_scores.csv  ai_framework_holdings.csv  ai_framework_indicators.csv  ai_framework_predictions.csv  ai_framework_scenarios.csv  ai_portfolio_lots.json  current_positions_public_seed.json
data/portfolio/: ai_portfolio_snapshots.csv  ai_portfolio_summary.csv
docs/: decision_process.md  framework_tracker.md  portfolio_tracker.md  research_monitor.md  strategy_system.md  website_design.md
scripts/: __init__.py  build_current_positions.py  build_fib_momentum.py  build_research_monitor.py  build_site.py  check_link_health.py  fetch_sec_filings.py  update_portfolio.py  validate_site.py
site/: README.md  app.js  current-positions-data.json  index.html  link-health.json  portfolio-data.json  provenance-coverage.json  research-data.js  research-monitor-data.json  styles.css
src/ai_portfolio_framework/: __init__.py  config.py  current_positions.py  (+8 more)
tests/: test_current_positions.py  test_fib_momentum.py  test_link_health.py  test_portfolio.py  test_provenance.py  test_research_monitor.py  test_sec_filings.py  test_watchlist_site.py
